cmake_minimum_required(VERSION 3.4)

SET(COVERAGE OFF CACHE BOOL "Coverage")
SET(CMAKE_CXX_COMPILER "/usr/bin/g++")
project(rk2)
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/googletest" "gtest")


add_library(sort STATIC main.cpp)

add_executable(RunTest ${CMAKE_CURRENT_SOURCE_DIR}/tests/MainTest.cpp)

if (COVERAGE)
    target_compile_options(RunTest PRIVATE --coverage)
    target_link_libraries(RunTest PRIVATE --coverage)
endif()

target_include_directories(RunTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

target_link_libraries(RunTest PRIVATE gtest gtest_main gmock_main sort)